docs/grammar.bnf
unit: decl
    | decl unit
    ;

decl: func
    ;

func: DEF IDENT stmt
    ;

stmt: LBRACE stmts RBRACE
    | expr SEMI
    ;

stmts:
    | stmt stmts
    ;

expr: primary
    | expr ADD expr
    | expr SUB expr
    | expr DIV expr
    | expr MUL expr
    | expr REM expr
    | expr QUESTION expr COLON expr
    ;

primary: DIGIT
    | ADD expr
    | SUB expr
    | LPAREN expr RPAREN
    ;

digit: [0-9]+ 
    ;

ident: [a-zA-Z_][a-zA-Z0-9_]* 
    ;
